# WAGMI

./: .env.example  .gitignore  ACTION_PLAN.md  ANALYSIS_SUMMARY_2026_06_06.md  ARCHITECTURE_AND_OPERATIONS_GUIDE.md  AUDIT_REPORT.md  AUTONOMOUS_EXECUTION_STATUS.md  AUTONOMOUS_SESSION_HANDOFF.md  BACKTEST_LOOP.md  BLUEPRINT.md  CLAUDE.md  CYCLE_10_CONTINUOUS_LEARNING_SYSTEM.md  CYCLE_1_COMPLETION_REPORT.md  CYCLE_2_5_RUNNING.md  CYCLE_2_COMPLETION_REPORT.md  CYCLE_3_COMPLETION_REPORT.md  CYCLE_4_ARCHITECTURE_FIX_AND_BASELINE_RECOVERY.md  CYCLE_4_ENHANCEMENT_GUIDE.md  CYCLE_5_PAPER_TRADING_PRELIMINARY_RESULTS.md  CYCLE_6_AUDIT_REPORT_20260506.md  CYCLE_8_DATA_PIPELINE_INTEGRITY.md  CYCLE_9_LLM_AGENT_SYSTEM_AUDIT.md  DELIVERABLES_INDEX.md  DELIVERY_SUMMARY.md  DREAMSTATE_UI_UPGRADE_SUMMARY.md  DREAMSTATE_UPGRADE_CYCLES.md  FINAL_STATUS_REPORT.md  FORENSIC_AUDIT_SYNTHESIS.md  HANDOFF.md  IMPLEMENTATION_SPRINT.md  IMPLEMENTATION_SUMMARY_FOR_OPUS.md  LAPTOP_SETUP.md  LLM_ARCHITECTURE_AUDIT.md  LLM_AUDIT_INDEX.md  LLM_DECISION_AUDIT.md  MASTER_IMPROVEMENT_PLAN.md  PAPER_TRADING.md  PHASE1_PHASE2_VALIDATION.md  PHASE3_DEPLOYMENT_READY_20260506.md  PHASES_2_6_ROADMAP.md  (+33 more)
memegine/: .env.example  .gitignore  AUTONOMOUS-PROMPT.md  COOKBOOK.md  GETTING_STARTED.md  MOBILE.md  MORNING-QUESTIONS.md  README.md  pyproject.toml
memegine/tests/: e2e_sim.py  test_archive.py  test_auto_codex.py  test_auto_variants.py  test_batch.py  test_batch_by_perf.py  test_bulk_retag.py  test_campaigns.py  test_caption_linter.py  test_capture_and_telegram.py  test_codex_audit.py  test_codex_graduation.py  test_codex_init.py  test_consistency.py  test_contact_sheet.py  test_corpus_export.py  test_dedup.py  test_discord_webhook.py  test_editor.py  test_grading.py  test_image_ops.py  test_like_winner.py  test_linter.py  test_lookbook.py  (+18 more)
(+1512 files in other folders)
