[project]
name = "memegine"
version = "0.1.0"
description = "Director's assistant for elite photo/video content creation. Free-first, craft-oriented, Telegram-ready."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "numpy>=1.24",
    "librosa>=0.10",
    "soundfile>=0.12",
]

[project.optional-dependencies]
online = [
    "anthropic>=0.40.0",
]
telegram = [
    "python-telegram-bot>=21.0",
]
console = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
watch = [
    "playwright>=1.47",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
memegine = "memegine.cli:app"
mem = "memegine.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
