[project]
name = "memegine"
version = "0.1.0"
description = "Director's assistant for elite photo/video content creation. Free-first, craft-oriented, Telegram-ready."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "numpy>=1.24",
    "librosa>=0.10",
    "soundfile>=0.12",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
online = [
    "anthropic>=0.40.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
memegine = "memegine.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
